--- a/performance/index.html
+++ b/performance/index.html
@@ -24,7 +24,6 @@
 
 </body>
 
-<script src="deferJSLoading.js"></script>
-<script src="game.js"></script>
+<script src="deferJSLoading.js&game.js"></script>
 
 </html>
