--- a/performance/index.html
+++ b/performance/index.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-
-<html manifest="frogger.appcache">
-
-<link rel="stylesheet" href="style.css">
-
-<head>
-
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-
-<title>Frogger</title>
-
-</head>
-
-<body onload="start_game()">
-
-<div id="game_div">
-
-<canvas id="game" width="399" height="565">
-
-</canvas>
-
-</div>
-
-</body>
-
-<script src="game.js"></script>
-
-</html>
+<!DOCTYPE html><html manifest="frogger.appcache"><head><link rel="stylesheet"href="style.css"><meta http-equiv="Content-Type"content="text/html; charset=UTF-8"><title>Frogger</title></head><body onload="start_game()"><div id="game_div"><canvas id="game"width="399"height="565"></canvas></div><script src="game.js"></script></body></html>
